Lezione 8 - openapi - /projects/{id} post, put, delete
